--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 RUN apk update && apk upgrade && apk add --no-cache git && \
 	git clone https://github.com/Pablichu/my_first_svelte-static-web.git && \
-    mv my_first_svelte-static-web/* . && \
-    rmdir my_first_svelte-static-web
+    mv my_first_svelte-static-web/* .
+    #rmdir my_first_svelte-static-web
 
 RUN npm install && \
     npm run build
