--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     depends_on:
       - mariadb
       - wordpress
+      - static_web
 
   wordpress:
     build: ./requirements/wordpress
