here is my page

--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -5,13 +5,12 @@ WORKDIR /app
 RUN apk update && apk upgrade && apk add --no-cache git && \
 	git clone https://github.com/Pablichu/my_first_svelte-static-web.git && \
     mv my_first_svelte-static-web/* . && \
-	ls -l
-    #rmdir my_first_svelte-static-web
+    rm -rf my_first_svelte-static-web
 
 RUN npm install && \
     npm run build
 
-#FROM alpine:3.15.6
-#COPY --from=build /app/public /var/www/html
+FROM alpine:3.15.6
+COPY --from=build /app/dist /var/www/html
 
 ENTRYPOINT [ "tail", "-F", "/dev/null"]
