can we make it work

--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -11,6 +11,6 @@ RUN npm install && \
     npm run build
 
 FROM alpine:3.15.6
-COPY --from=build /app/dist /var/www/html
+COPY --from=build /app/dist /var/www/html/dist
 
 ENTRYPOINT [ "tail", "-F", "/dev/null"]
