--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -11,6 +11,7 @@ RUN npm install && \
     npm run build
 
 FROM alpine:3.15.6
+COPY ./conf/setup.sh .
 COPY --from=build /app/dist /tmp
 
-ENTRYPOINT [ "tail", "-F", "/dev/null"]
+ENTRYPOINT [ "sh", "setup.sh" ]
