--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -33,4 +33,8 @@ server {
 	  fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
       fastcgi_pass adminer:9000; #PHP for wordpress will listen on the port 9000
 	}
+
+	location ~ ^/static {
+	  root /var/www/html/static
+	}
 }
