--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,10 +13,12 @@ server {
     index index.php index.html;
 
     location / {
-      #proxy_pass https://localhost:443;
-    	root /var/www/html/wordpress;
-      try_files $uri $uri/ /index.php?$args;
+	  root /var/www/html/static;
     }
+	location /wordpress {
+      root /var/www/html/wordpress;
+      try_files $uri $uri/ /index.php?$args;
+	}
 
     location ~ \.php$ {
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -34,7 +36,4 @@ server {
       fastcgi_pass adminer:9000; #PHP for wordpress will listen on the port 9000
 	}
 
-	location ~ ^/static {
-	  root /var/www/html/static;
-	}
 }
