fixing nginx conf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,11 +13,11 @@ server {
     index index.php index.html;
 
     location / {
-	  root /var/www/html/static;
-    }
-	location /wordpress {
       root /var/www/html/wordpress;
       try_files $uri $uri/ /index.php?$args;
+    }
+	location /static {
+	  root /var/www/html/static;
 	}
 
     location ~ \.php$ {
@@ -33,7 +33,7 @@ server {
 	  include /etc/nginx/fastcgi_params;
 	  fastcgi_index index.pxp;
 	  fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
-      fastcgi_pass adminer:9000; #PHP for wordpress will listen on the port 9000
+      fastcgi_pass adminer:9000; #PHP for adminer will listen on the port 9000
 	}
 
 }
