trying to fix conf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -16,9 +16,6 @@ server {
       root /var/www/html/wordpress;
       try_files $uri $uri/ /index.php?$args;
     }
-	location /static {
-	  root /var/www/html/static;
-	}
 
     location ~ \.php$ {
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -36,4 +33,8 @@ server {
       fastcgi_pass adminer:9000; #PHP for adminer will listen on the port 9000
 	}
 
+	location /static {
+	  root /var/www/html/static;
+      try_files $uri $uri/ /index.html?$args;
+	}
 }
