--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,7 +13,7 @@ server {
     index index.php index.html;
 
     location / {
-      root /var/www/html/wordpress;
+      root /var/www/html;
       try_files $uri $uri/ /index.php?$args;
     }
 
@@ -33,8 +33,8 @@ server {
       fastcgi_pass adminer:9000; #PHP for adminer will listen on the port 9000
 	}
 
-	location /static {
-	  root /var/www/html/static;
-      try_files $uri $uri/ /index.html?$args;
-	}
+	#location /static {
+	#  root /var/www/html/static;
+    #  try_files $uri $uri/ /index.html?$args;
+	#}
 }
