Okay, adding user

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,3 +5,5 @@ MYSQL_ROOT_PW="achus"
 MYSQL_USER="wp_user_access"
 MYSQL_PW="achusdenuevo"
 WP_DB_NAME="wp_db_mariadb"
+# FTP USER
+FTP_USER="pacomelo"
