--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -34,7 +34,7 @@ server {
 	}
 
 	location /static {
-	  root /var/www/html/static;
+	  root /var/www/html;
       try_files $uri $uri/ /index.html?$args;
 	}
 }
