--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -35,6 +35,6 @@ server {
 
 	location /static {
 	  root /var/www/html;
-      try_files $uri $uri/ /index.html?$args;
+      try_files /index.html;
 	}
 }
