--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -13,5 +13,6 @@ RUN npm install && \
 FROM alpine:3.15.6
 COPY ./conf/setup.sh .
 COPY --from=build /app/dist /tmp
+COPY --from=build /app/src/assets /tmp
 
 ENTRYPOINT [ "sh", "setup.sh" ]
