--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     ssl_certificate /etc/sslcerts/certificate.crt;#path to certificate.crt
     ssl_certificate_key /etc/sslcerts/private.key;#path to private.key
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.3;
     
     access_log off;
     server_tokens off;
